--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,12 @@
-<html>
-<head>
-    <title>Django Blogu</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+{% block content %}
   {% for post in posts %}
-  <div>
-      <p>published: {{ post.yayinlama_tarihi }}</p>
-      <h1><a href="">{{ post.baslik }}</a></h1>
-      <p>{{ post.yazi|linebreaksbr }}</p>
-  </div>
+      <div class="post">
+          <div class="date">
+              {{ post.yayinlama_tarihi }}
+          </div>
+          <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.baslik }}</a></h1>
+          <!-- <p>{{ post.yazi|linebreaksbr }}</p> -->
+      </div>
   {% endfor %}
-</body>
-</html>
+{% endblock %}
